# Mindpunk-Game-Dev-Starter-Kit

./: .gitignore  LICENSE  LOGO_SETUP.md  README.md  SOBRE.md
docs/: GDD-Template.md
jogos-exemplos/express/Game-UW/: README.md  SRC_COMENTADO_Game.ts
jogos-exemplos/express/Game-UW/docs/: 00_visao-geral.md  01_unidades.md  02_mapas.md  03_micros-macros.md  GDD.md  SRC_COMENTADO_unitDefinitions.ts
jogos-exemplos/express/Game-UW/exercicios/: nivel-1-basico.md  nivel-2-intermediario.md  nivel-3-avancado.md
jogos-exemplos/mindpunk-fragment-01/: README.md  SRC_COMENTADO_useGameStore.ts
jogos-exemplos/mindpunk-fragment-01/docs/: 00_visao-geral.md  01_game-loop.md  GDD.md  SRC_COMENTADO_ai.ts
jogos-exemplos/mindpunk-fragment-01/exercicios/: nivel-1-basico.md  nivel-2-criativo.md  nivel-3-avancado.md
jogos-exemplos/rust/: .gitignore  Cargo.toml  README.md  README_EDUCACIONAL.md
jogos-exemplos/rust/docs/: GDD.md  SRC_COMENTADO_bsp.rs
jogos-exemplos/rust/exercicios/: nivel-1-basico.md
jogos-exemplos/rust/scripts/: enemies.py  items.py  loot.py
jogos-exemplos/rust/src/: combat.rs  enemy.rs  fov.rs  game.rs  main.rs  map.rs  player.rs  python_bridge.rs  renderer.rs
